--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <body>
     <h1>
     <ul style="list-style-type:disc;">
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Sass</li>
-      <li>Project Markup</li>
+      <li><a href="exercises/HTML/HTML.html">HTML</a></li>
+      <li><a href="exercises/CSS/CSS.html">CSS</a></li>
+      <li><a href="exercises/Sass/Sass.html">HTML</a></li>
+      <li><a href="exercises/Project/project.html">HTML</a></li>
     </ul>
     </h1>
   </body>
