--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <ul style="list-style-type:disc;">
       <li><a href="exercises/HTML/HTML.html">HTML</a></li>
       <li><a href="exercises/CSS/CSS.html">CSS</a></li>
-      <li><a href="exercises/Sass/Sass.html">HTML</a></li>
-      <li><a href="exercises/Project/project.html">HTML</a></li>
+      <li><a href="exercises/Sass/Sass.html">Sass</a></li>
+      <li><a href="exercises/Project/project.html">Project</a></li>
     </ul>
     </h1>
   </body>
