--- a/exercises/HTML/HTML.html
+++ b/exercises/HTML/HTML.html
@@ -6,9 +6,8 @@
   <body>
     <h1>
     <ul style="list-style-type:disc;">
-      <li><a href="exercises/HTML/1.git-navigation/gitNavi.html">1.git-navigation</a></li>
-      <li><a href="exercises/HTML/2.markdown-to-html/markdownTH.html">2.markdown-to-html</a></li>
-      
+      <li><a href="1.git-navigation/gitNavi.html">1.git-navigation</a></li>
+      <li><a href="2.markdown-to-html/markdownTH.html">2.markdown-to-html</a></li>  
     </ul>
     </h1>
   </body>
