--- a/exercises/HTML/HTML.html
+++ b/exercises/HTML/HTML.html
@@ -5,10 +5,10 @@
   </head>
   <body>
     <h1>
-    <ul style="list-style-type:disc;">
-      <li><a href="1.git-navigation/gitNavi.html">1.git-navigation</a></li>
-      <li><a href="2.markdown-to-html/markdownTH.html">2.markdown-to-html</a></li>  
-    </ul>
+    <ol type="1">
+      <li><a href="git-navigation/gitNavi.html">git-navigation</a></li>
+      <li><a href="markdown-to-html/markdownTH.html">markdown-to-html</a></li>  
+    </ol>
     </h1>
   </body>
 </html>
