--- a/exercises/HTML/HTML.html
+++ b/exercises/HTML/HTML.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>HTML</title>
+    <link rel="stylesheet" href="/home/jing/learning-markup/style.css"/>
   </head>
   <body>
     <h1>
