--- a/exercises/HTML/markdown-to-html/markdownTH.html
+++ b/exercises/HTML/markdown-to-html/markdownTH.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Markdown to HTML</title>
+        <link rel="stylesheet" href="/home/jing/learning-markup/style.css"/>
     </head>
     <body>
         <H1>Challenge: Markdown to HTML</H1>
@@ -36,28 +37,28 @@
         </tr>
         </table>
         <H2>Exercise</H2>
-          <p>Note: it is considered a bad practice to add styling inline in your HTML document.</p>
+          <p class="note"><strong>Note:</strong> it is considered a bad practice to add styling inline in your HTML document.</p>
         <H2>Step 1: Markdown to HTML</H2>
           <ol>
-            <li>Start by making an index.html file</li>
+            <li>Start by making an <span>index.html</span> file</li>
             <li>Add the most basic and important HTML tags (with their required properties) to your document:</li>
               <ul>
-                  <li>html</li>
-                  <li>head</li>
-                  <li>body</li>
+                  <li><span>html</span></li>
+                  <li><span>head</span></li>
+                  <li><span>body</span></li>
                   <li>...</li>
               </ul>
             <li>Now convert this markdown document (yes the one you are reading) to HTML. Make sure you use the right HTML tag for each part!</li>
           </ol>
         <H2>Step 2: Adding CSS</H2>
           <ol>
-              <li>Start by making a style.css file.</li>
-              <li>Link the style.css file to your index.html</li>
+              <li>Start by making a <span>style.css</span> file.</li>
+              <li>Link the <span>style.css</span> file to your <span>index.html</span></li>
               <li>Write some styling. Make sure that every element has some styling!</li>
           </ol>
         <H2>Step 3: Publishing on Github pages</H2>
-          <p>Make sure you add(ed) your exercise folder to the list of links on your published HTML page</p>
-        <H2>Step 4: Audit yourself(bonus)</H2>
+          <p>Make sure you add(ed) your exercise folder to the list of links on your published <span>HTML</span> page</p>
+        <H2>Step 4: Audit yourself (bonus)</H2>
           <p>Use <a href="https://developers.google.com/web/tools/lighthouse/">this tool</a> to audit yourself. It will give you information about a lot of things:</p>
           <ul>
               <li>Best practices</li>
