--- a/exercises/HTML/markdown-to-html/markdownTH.html
+++ b/exercises/HTML/markdown-to-html/markdownTH.html
@@ -8,32 +8,32 @@
         <H1>Challenge: Markdown to HTML</H1>
         <table>
         <tr>
-            <td>Challenge Parameters</td>
-            <td>Challenge Details</td>
+            <td><strong></strong>Challenge Parameters</td>
+            <td><Challenge Details</td>
         </tr>
         <tr>
             <td>Repository</td>
-            <td>1.markdown-to-html</td>
+            <td><span>1.markdown-to-html</span></td>
         </tr>
         <tr>
             <td>Challenge type</td>
-            <td>Learning Challenge</td>
+            <td><span>Learning Challenge</span></td>
         </tr>
         <tr>
             <td>Duration</td>
-            <td>1.5 days</td>
+            <td><span>1.5 days</span></td>
         </tr>
         <tr>
             <td>Deadline</td>
-            <td>06/09/2019 17:00</td>
+            <td><span>06/09/2019 17:00</span></td>
         </tr>
         <tr>
             <td>Deployment method</td>
-            <td>GitHub pages</td>
+            <td><span>GitHub pages</span></td>
         </tr>
         <tr>
             <td>Group composition</td>
-            <td>solo</td>
+            <td><span>solo</span></td>
         </tr>
         </table>
         <H2>Exercise</H2>
