--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Markup</title>
-    <link rel="stylesheet" href="/home/jing/learning-markup/resources/styles.css" />
+    <link rel="stylesheet" href="resources/styles.css" />
   </head>
   <body>
     <h1>
