--- a/exercises/HTML/HTML.html
+++ b/exercises/HTML/HTML.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>HTML</title>
-    <link rel="stylesheet" href="resouces/styles.css"/>
+    <link rel="stylesheet" href="resources/styles.css"/>
   </head>
   <body>
     <h1>
