--- a/exercises/HTML/markdown-to-html/markdownTH.html
+++ b/exercises/HTML/markdown-to-html/markdownTH.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Markdown to HTML</title>
-        <link rel="stylesheet" href="resouces/styles.css"/>
+        <link rel="stylesheet" href="resources/styles.css"/>
     </head>
     <body>
         <H1>Challenge: Markdown to HTML</H1>
