--- a/exercises/HTML/markdown-to-html/markdownTH.html
+++ b/exercises/HTML/markdown-to-html/markdownTH.html
@@ -8,8 +8,8 @@
         <H1>Challenge: Markdown to HTML</H1>
         <table>
         <tr>
-            <td><strong></strong>Challenge Parameters</td>
-            <td><Challenge Details</td>
+            <td><strong>Challenge Parameters</strong></td>
+            <td><strong>Challenge Details</strong></td>
         </tr>
         <tr>
             <td>Repository</td>
@@ -67,14 +67,15 @@
               <li>...</li>
           </ul>
         <H2>Step 5: Challenge yourself and eachother (bonus)</H2>
-          <p>Look up some new/more advanced things you can integrate in your first "website". Ask eachother for a challenge, or come and ask me for one, if you dare! Laughs diabolically</p>
+          <p>Look up some new/more advanced things you can integrate in your first "website". Ask eachother for a challenge, or come and ask me for one, <strong>if you dare!</strong> <em>Laughs diabolically</em></p>
         <H2>Goals</H2>
           <p>After this chapter, you should have acquired the following skills/competencies:</p>
-          <ul>
-              <li>Able to write some simple HTML.</li>
-              <li>Able to write some simple CSS.</li>
-              <li>Link a CSS file to an HTML file.</li>
-              <li>Able to challenge yourself.</li>
+          <ul class="ul-checklist">
+              <li><input type="checkbox">Able to write some simple HTML.</li>
+              <li><input type="checkbox">Able to write some simple CSS.</li>
+              <li><input type="checkbox">Link a CSS file to an HTML file.</li>
+              <li><input type="checkbox">Able to challenge yourself.</li>
           </ul>
+        <img src="resources/lighthouse.jpg">
     </body>
 </html>
