--- a/exercises/HTML/markdown-to-html/markdownTH.html
+++ b/exercises/HTML/markdown-to-html/markdownTH.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
         <title>Markdown to HTML</title>
         <link rel="stylesheet" href="resources/styles.css"/>
     </head>
@@ -70,12 +71,12 @@
           <p>Look up some new/more advanced things you can integrate in your first "website". Ask eachother for a challenge, or come and ask me for one, <strong>if you dare!</strong> <em>Laughs diabolically</em></p>
         <H2>Goals</H2>
           <p>After this chapter, you should have acquired the following skills/competencies:</p>
-          <ul class="ul-checklist">
-              <li><input type="checkbox">Able to write some simple HTML.</li>
-              <li><input type="checkbox">Able to write some simple CSS.</li>
-              <li><input type="checkbox">Link a CSS file to an HTML file.</li>
-              <li><input type="checkbox">Able to challenge yourself.</li>
+          <ul>
+              <li class="ul-checklist">Able to write some simple HTML.</li>
+              <li class="ul-checklist">Able to write some simple CSS.</li>
+              <li class="ul-checklist">Link a CSS file to an HTML file.</li>
+              <li class="ul-checklist">Able to challenge yourself.</li>
           </ul>
-        <img src="resources/lighthouse.jpg">
+        <a href="https://developers.google.com/web/tools/lighthouse/"><img src="resources/lighthouse.jpg" alt="The lighthouse website's logo"></a>
     </body>
 </html>
