--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <h1>
     <ul style="list-style-type:disc;">
       <li><a href="exercises/HTML/HTML.html">HTML</a></li>
+      <ol type="1">
+        <li><a href="exercises/HTML/git-navigation/gitNavi.html">git-navigation</a></li>
+        <li><a href="exercises/HTML/markdown-to-html/markdownTH.html">markdown-to-html</a></li>  
+      </ol>
       <li><a href="exercises/CSS/CSS.html">CSS</a></li>
       <li><a href="exercises/Sass/Sass.html">Sass</a></li>
       <li><a href="exercises/Project/project.html">Project</a></li>
