--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
     <ul style="list-style-type:disc;">
       <li>HTML</li>
       <ol type="1">
-        <li><a href="exercises/HTML/git-navigation/gitNavi.html">git-navigation</a></li>
-        <li><a href="exercises/HTML/markdown-to-html/markdownTH.html">markdown-to-html</a></li>  
+        <li><a href="exercises/HTML/git-navigation/index.html">git-navigation</a></li>
+        <li><a href="exercises/HTML/markdown-to-html/index.html">markdown-to-html</a></li>  
       </ol>
       <li>CSS</li>
+      <ol type="1">
+        <li><a href="exercises/CSS/about-me/index.html">About Me</a></li>
+        <li><a href="exercises/CSS/flexbox/index.html">Flexbox Layout</a></li>
+        <li><a href="exercises/CSS/grid/index.html">Grid Layout</a></li>
+      </ol>
       <li>Sass</li>
       <li>Project</li>
     </ul>
