--- a/exercises/CSS/about-me/index.html
+++ b/exercises/CSS/about-me/index.html
@@ -19,6 +19,15 @@
             <p class="quote">― Albert Einstein</p>     
         </header>
 
+        <div>
+            <ul class="Nav-bar">
+                <li><a class="active" href="#home">Home</a></li>
+                <li><a href="#news">News</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about">About</a></li>
+            </ul>
+        </div>  
+
         <main>
         <h1>Q&A</h1>
         <table>
