--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li>Sass</li>
       <ol type="1">
         <li><a href="exercises/Sass/multipager/index.html">Multi-pager</a></li>
+        <li><a href="exercises/Sass/admin-panel/adminpanel.html">Admin-panel</a></li>
       </ol>
       <li>Project</li>
     </ul>
