--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="exercises/CSS/about-me/index.html">About Me</a></li>
         <li><a href="exercises/CSS/flexbox/index.html">Flexbox Layout</a></li>
         <li><a href="exercises/CSS/grid/index.html">Grid Layout</a></li>
-        <li>Media Query</li>
+        <li><a href="exercises/CSS/media-queries/website.html">Media Query</a></li>
       </ol>
       <li>Sass</li>
       <ol type="1">
