--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href="exercises/Sass/multipager/index.html">Multi-pager</a></li>
         <li><a href="exercises/Sass/admin-panel/adminpanel.html">Admin-panel</a></li>
       </ol>
-      <li>Project</li>
+      <li><a href="exercises/Behind-the-Scenes/Project.html">Markup Project</a></li>
     </ul>
     </h1>
   </body>
